# RustReminder

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: cli.rs  main.rs
