[package]
name = "rusty-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
diesel = { version = "2.1.1", features = ["postgres"] }
dotenvy = "0.15.7"
chrono = "0.4.31"
