[package]
name = "rusty-reminder"
version = "0.1.0"
edition = "2021"
authors = ["favo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.31"
dotenv_codegen = "0.15.0"

